tests/struct_composition_bad_non_struct.stderr
tests/struct_composition_bad_non_struct.hop:3:2: error: HOP2013: embedded field type must be a struct
