tests/struct_composition_bad_non_struct.hop
// Verifies struct composition bad non struct.
struct Bad {
	int
}
